# AlphaStream_India

./: .env.example  .gitignore  DEPLOYMENT.md  DataQuest_RD_Report.md  Dockerfile  Documentation_latex.txt  README.md  SUBMISSION.md  Task  demo_final_fixed.json  demo_live.py  demo_pipeline.py  docker-compose.yml  main.py  pyproject.toml  start_demo.sh
backend/: .env.example  Dockerfile  README.md  pathway_rag.yaml  pyproject.toml  start.sh
backend/data/: demo_insider.json  nifty50_symbols.csv  sector_mapping.json
backend/data/articles/: article_00181cf9.txt  article_01450ded.txt  article_01b67441.txt  article_01f78012.txt  article_01fc4c6a.txt  article_03193c05.txt  article_03baf9f5.txt  article_04196597.txt  article_0435bc1f.txt  article_06a03213.txt  article_0749d81d.txt  article_07a5ed75.txt  article_07d65a41.txt  article_08f2548d.txt  article_0aba8ca4.txt  article_0b19595b.txt  article_0c8b0648.txt  article_0e45ad33.txt  article_100b1efb.txt  article_11318359.txt  article_1315cfa1.txt  article_1504b04b.txt  article_154c07fa.txt  article_16cbedc0.txt  article_16ea3463.txt  article_18158cee.txt  article_1854758f.txt  article_18be7a40.txt  article_1ac86c4f.txt  article_1b680b70.txt  article_1be11d1a.txt  article_1cfb6ed0.txt  article_1d27a91f.txt  article_1db0e44f.txt  article_1e4dc022.txt  article_1ed6fb0e.txt  article_20636a9c.txt  article_20c60147.txt  article_214ed90b.txt  article_2168999a.txt  (+267 more)
backend/scripts/: inject_article.py
backend/src/: config.py  llm.py
backend/src/agents/: anomaly_agent.py  backtest_agent.py  chart_agent.py  decision_agent.py  filing_agent.py  flow_agent.py  insider_agent.py  pattern_agent.py  report_agent.py  risk_agent.py  search_agent.py  sentiment_agent.py  technical_agent.py
backend/src/agents/nlq/: graph_state.py  llm_provider.py  memory.py  middleware.py  qna_agent.py  vector_store.py
backend/src/agents/nlq/mcp_servers/: market_data_server.py  portfolio_server.py  search_server.py  signal_server.py
backend/src/agents/nlq/text2sql/: correction_loop.py  guardrails.py  (+3 more)
backend/src/api/: app.py  insights.py
backend/src/api/routers/: global_market.py  insights.py  market.py  nlq.py
backend/src/connectors/: base_connector.py  bse_connector.py  fii_dii_connector.py  geopolitical_connector.py  global_market_connector.py  groww_connector.py  insider_connector.py  macro_connector.py  news_aggregator.py  news_classifier.py  news_connector.py  nse_connector.py  polling.py  rss_connector.py  sec_connector.py
backend/src/data/: article_ingest.py  data_refresh.py  market_schema.py  signal_writer.py  ticker_universe.py
backend/src/pipeline/: __init__.py  adaptive_rag_server.py  chunking.py  fusion_engine.py  pathway_tables.py  portfolio_manager.py  rag_service.py  reranking.py  retrieval.py
backend/tests/: test_api.py  test_pathway.py  test_rag.py  test_search_first_nlq.py  test_todo1_sql_injection.py
(+85 files in other folders)
